# Vovy

./: .gitignore  CMakeLists.txt  README.md  download_resources.py  old_main.cpp
cmake/: DownloadResource.cmake  DownloadSponza.cmake  FetchResources.cmake  LinkASSIMP.cmake  LinkDirectXTex.cmake  LinkGLFW.cmake  LinkGli.cmake  LinkImGuizmo.cmake  LinkImGuizmoQuat.cmake  LinkImgui.cmake  LinkMemplumber.cmake  LinkTinyObjLoader.cmake  LinkVMA.cmake
resources/: Chacacter_Geo_Geovanni.fbx  Jinx_Winx.fbx  Jinx_Winx.mtl  Monkey.mtl  MonkeyTest.fbx  MonkeyTest.glb  MonkeyTest.mtl  TestScene.glb  TestScene.usd  XYZaxis.mtl  curves.bram  imgui.ini  monkey.glb  plane.gltf  test.fbx
resources/VikingRoom/: viking_room.mtl
resources/normalTest/: normalTest.fbx  normalTest.glb  normalTest.gltf  normalTest.usdc
resources/sigmavanni/: SigmaVanni.gltf
resources/sponza/: sponza.mtl
shaders/: DebugModes.glsl  PhysicalCameraMath.glsl  blit.frag  combine.frag  cubemap.frag  cubemap.vert  deferred.frag  deferred.vert  depthPrepass.vert  diffuseIrradiance.frag  lighting.glsl  lightingPass.frag  line.vert  shader.frag  shader.vert  shadow.frag  shadow.vert  shadowMapTest.frag  triangle.vert
src/: FrameContext.h  VApp.cpp  VApp.cpp~  VApp.h  VBuffer.cpp  VBuffer.h  VCamera.cpp  VCamera.h  VDevice.cpp  VDevice.h  VGameObject.cpp  VGameObject.h  VImage.cpp  VImage.h  VModel.cpp  VModel.h  VPipeline.cpp  VPipeline.h  VRenderPass.cpp  VRenderPass.h  VRenderSystem.cpp  VRenderSystem.h  VSwapchain.h  VWindow.cpp  VWindow.h  main.cpp
src/Core/: Device.cpp  Device.h  VDevice.cpp  VDevice.h  VWindow.cpp  VWindow.h  Window.cpp  Window.h
src/Descriptors/: DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorWriter.cpp  DescriptorWriter.h  VDescriptorPool.cpp  VDescriptorPool.h  VDescriptorSetLayout.cpp  VDescriptorSetLayout.h  VDescriptorWriter.cpp  VDescriptorWriter.h
src/Rendering/: ImguiRenderSystem.cpp  ImguiRenderSystem.h  LineRenderSystem.cpp  LineRenderSystem.h  Pipeline.cpp  Pipeline.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  VPipeline.cpp  VPipeline.h  VRenderPass.cpp  VRenderPass.h  VRenderSystem.cpp  VRenderSystem.h  VSwapchain.cpp  VSwapchain.h
src/Rendering/Passes/: BlitPass.cpp  BlitPass.h  CompositePass.h  DepthPrePass.cpp  DepthPrePass.h  GeometryPass.cpp  GeometryPass.h  LightingPass.cpp  LightingPass.h  LinePass.cpp  LinePass.h  SelectPass.cpp  SelectPass.h  ShadowPass.cpp  ShadowPass.h  compositePass.cpp
src/Rendering/RenderSystems/: GameObjectRenderSystem.cpp  GameObjectRenderSystem.h  ImguiRenderSystem.cpp  ImguiRenderSystem.h  ImguiRenderSystem.h~  LineRenderSystem.cpp  LineRenderSystem.h  ShadowRenderSystem.cpp  ShadowRenderSystem.h
src/Resources/: Buffer.cpp  Buffer.h  GeoBuffer.cpp  GeoBuffer.h  HDRI.cpp  HDRI.h  Image.cpp  Image.h  UniformBuffer.h  VBuffer.cpp  VBuffer.h  VImage.cpp  VImage.h
src/Resources/Image/: ImageView.cpp  ImageView.h  Sampler.cpp  Sampler.h
src/Scene/: DirectionalLight.cpp  DirectionalLight.h  GameObject.cpp  GameObject.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h  VGameObject.cpp  VGameObject.h  VMesh.cpp  VMesh.h  VModel.cpp  VModel.h  VScene.cpp  VScene.h
src/Scene/Lights/: DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h
src/Utils/: AABB.cpp  AABB.h  AppGui.cpp  AppGui.h  BezierCurves.cpp  BezierCurves.h  Camera.cpp  Camera.h  Chalk.h  DebugLabel.cpp  DebugLabel.h  DeltaTime.cpp  DeltaTime.h  FrameContext.h  LineManager.cpp  LineManager.h  ResourceManager.cpp  ResourceManager.h  Singleton.h  Timer.cpp  Timer.h  VCamera.cpp  VCamera.h
